notesOnCrossCompiling.txt
Conan Profile for linux_to_win64

luis@ryzenLinux:~/.conan/profiles$ cat linux_to_win64 
        toolchain=/usr/x86_64-w64-mingw32 # Adjust this path
        target_host=x86_64-w64-mingw32
        cc_compiler=gcc
        cxx_compiler=g++

        [env]
        CONAN_CMAKE_FIND_ROOT_PATH=$toolchain
        CHOST=$target_host
        AR=$target_host-ar
        AS=$target_host-as
        RANLIB=$target_host-ranlib
        CC=$target_host-$cc_compiler
        CXX=$target_host-$cxx_compiler
        STRIP=$target_host-strip
        RC=$target_host-windres

        [settings]
        # We are cross-building to Windows
        os=Windows
        arch=x86_64
        compiler=gcc

        # Adjust to the gcc version of your MinGW package
        compiler.version=9.3
        compiler.libcxx=libstdc++11
        build_type=Release

CMake Toolchain file:
        set(CMAKE_SYSTEM_NAME Windows)
        set(TOOLCHAIN_PREFIX x86_64-w64-mingw32)
        set(CMAKE_SYSROOT /usr/lib/gcc/x86_64-w64-mingw32/9.3-posix)

        set(CMAKE_C_COMPILER ${TOOLCHAIN_PREFIX}-gcc)
        set(CMAKE_CXX_COMPILER ${TOOLCHAIN_PREFIX}-g++)
        set(CMAKE_Fortran_COMPILER ${TOOLCHAIN_PREFIX}-gfortran)
        set(CMAKE_RC_COMPILER ${TOOLCHAIN_PREFIX}-windres)



For configuring and building on mingw

conan install --build missing --profile linux_to_win64 ../
cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_TOOLCHAIN_FILE=../cmake/linux-mingw64.cmake ../

Current problem which I am not able to solve:

[ 11%] Building CXX object src/CMakeFiles/exiv2lib_int.dir/cr2header_int.cpp.obj
cd /media/linuxDev/programming/exiv2/buildMingw/src && /usr/bin/x86_64-w64-mingw32-g++ --sysroot=/usr/lib/gcc/x86_64-w64-mingw32/9.3-posix  -Dexiv2lib_STATIC @CMakeFiles/exiv2lib_int.dir/includes_CXX.rsp -O3 -DNDEBUG -fvisibility=hidden -fno-keep-inline-dllexport   -Wp,-D_GLIBCXX_ASSERTIONS -Wp,-D_FORTIFY_SOURCE=2 -Wall -Wcast-align -Wpointer-arith -Wformat-security -Wmissing-format-attribute -Woverloaded-virtual -W -std=c++11 -o CMakeFiles/exiv2lib_int.dir/cr2header_int.cpp.obj -c /media/linuxDev/programming/exiv2/src/cr2header_int.cpp
In file included from /media/linuxDev/programming/exiv2/include/exiv2/xmp_exiv2.hpp:34,
                 from /media/linuxDev/programming/exiv2/include/exiv2/image.hpp:31,
                 from /media/linuxDev/programming/exiv2/src/tiffimage_int.hpp:33,
                 from /media/linuxDev/programming/exiv2/src/cr2header_int.hpp:31,
                 from /media/linuxDev/programming/exiv2/src/cr2header_int.cpp:1:
/media/linuxDev/programming/exiv2/include/exiv2/properties.hpp:215:21: error: ‘mutex’ in namespace ‘std’ does not name a type
  215 |         static std::mutex mutex_;
      |                     ^~~~~


For some reason is not finding the right headers where to find the new C++11 stuff which are in this
the folder:
        set(CMAKE_SYSROOT /usr/lib/gcc/x86_64-w64-mingw32/9.3-posix)
